--- a/scss/helpers/_breakpoints-config.scss
+++ b/scss/helpers/_breakpoints-config.scss
@@ -1,6 +1,8 @@
 $mobile-portrait: breakpointToEm(320px);
 $mobile-landscape: breakpointToEm(568px);
 
+$mobile-wide: breakpointToEm(668px);
+
 $tablet-portrait: breakpointToEm(768px);
 
 $desktop-small: breakpointToEm(1024px);
