--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -39,6 +39,7 @@
 @import "components/containers";
 @import "components/buttons";
 @import "components/icons";
+@import "components/slider";
 
 /*------------------------------------------------------------*\
                       LAYOUT INCLUDES
