--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -12,14 +12,33 @@ header {
     &__linksList {
         display: flex;
         justify-content: center;
+        flex: 1;
+        text-align: center;
+
+        @media screen and (min-width: $mobile-wide) {
+            flex: 0;
+        }
+
+        li {
+            flex: 1;
+
+            @media screen and (min-width: $mobile-wide) {
+                flex: 0;
+            }
+        }
 
         .navigation__link {
-            padding: 1rem 1.5rem;
+            padding: 1rem .75rem;
             display: block;
             border-bottom-width: 0;
             color: $fontColorPrimary;
             box-shadow: inset 0 0 0 0 $sectionHoverColor;
             transition: box-shadow 0.3s ease, color .3s ease;
+
+            @media screen and (min-width: $mobile-wide) {
+                padding-left: 1.5rem;
+                padding-right: 1.5rem;
+            }
 
             &:hover {
                 box-shadow: inset 0 -3px 0 0 $sectionHoverColor;
@@ -38,6 +57,12 @@ header {
         }
 
         &--socialMedia {
+            display: none;
+
+            @media screen and (min-width: $mobile-wide) {
+                display: flex;
+            }
+
             .navigation__link {
                 padding: .85rem .75rem;
 
