--- a/scss/components/_containers.scss
+++ b/scss/components/_containers.scss
@@ -1,43 +1,80 @@
 .containerHero {
-    @media screen and (min-width: $tablet-portrait) {
+    overflow: hidden;
+    @media screen and (min-width: $mobile-landscape) {
         display: flex;
         justify-content: flex-end;
         align-items: center;
+    }
+
+    @media screen and (min-width: $desktop-small) and (min-height: $mobile-wide) {
         min-height: 100vh;
     }
 
-    @media screen and (min-width: $desktop-small) {
-        min-height: 0;
-        height: 100vh;
-    }
-    overflow: hidden;
-
     &__list {
         @media screen and (min-width: $tablet-portrait) {
-            @include adjust-font-size-to(24px, 10);
+            @include adjust-font-size-to(20px, 10);
         }
         @media screen and (min-width: $desktop-small) {
-            @include adjust-font-size-to(30px, 14);
+            @include adjust-font-size-to(28px, 14);
         }
 
         @include padding-trailer(6);
         font-weight: $semiBold;
     }
 
-    &__button {
-        @include adjust-font-size-to(30px, 12);
+    & &__button {
+        @include adjust-font-size-to(24px, 8);
+
+        @media screen and (min-width: $tablet-portrait) {
+            @include adjust-font-size-to(30px, 12);
+        }
     }
 
     &__wrapper {
-        @media screen and (min-width: $tablet-portrait) {
+        text-align: center;
+
+        &--text {
+            text-align: center;
+
+            div {
+                padding-left: 1em;
+                padding-right: 1em;
+
+                @media screen and (min-width: $mobile-landscape) {
+                    padding-right: 15%;
+                    padding-left: 1.5em;
+                    padding-bottom: 1.5em;
+                }
+
+                @media screen and (min-width: $desktop-small) {
+                    padding-right: 3em;
+                }
+            }
+        }
+
+        @media screen and (min-width: $mobile-landscape) {
             text-align: right;
+            flex: 7;
+        }
+
+        @media screen and (min-width: $desktop-small) {
             flex: 1;
         }
 
         &--imageContainer {
-            @media screen and (min-width: $tablet-portrait) {
+            @media screen and (min-width: $mobile-landscape) {
                 align-self: flex-end;
             }
+
+            @media screen and (min-width: $mobile-landscape) {
+                text-align: right;
+                flex: 5;
+            }
+
+            @media screen and (min-width: $desktop-small) {
+                flex: 1;
+            }
+
             position: relative;
         }
     }
@@ -45,7 +82,18 @@
     &__image {
         margin-left: auto;
         margin-right: 0;
-        max-height: calc(100vh - 4em);
+        padding-top: 2em;
+        padding-left: 25%;
+
+        @media screen and (min-width: $mobile-landscape) {
+            padding-left: 0;
+            padding-top: 4em;
+        }
+
+        @media screen and (min-width: $desktop-small) and (min-height: $mobile-wide) {
+            padding-top: 0;
+            max-height: calc(100vh - 4em);
+        }
     }
 
     &__background {
@@ -66,9 +114,17 @@
             animation-direction: alternate;
             @include absolute($bottom: -50%, $right: 0);
             background-color: $elementColor;
-            width: 104%;
+            width: 115%;
             height: 45%;
             z-index: -1;
+
+            @media screen and (min-width: $mobile-landscape) {
+                width: 125%;
+            }
+
+            @media screen and (min-width: $desktop-large) {
+                width: 104%;
+            }
         }
 
         &:before {
@@ -97,13 +153,20 @@
 
 .containerSubtitle {
     text-align: center;
-    @include adjust-font-size-to(32px, 12);
-    padding-left: 1em;
-    padding-right: 1em;
+    @include adjust-font-size-to(22px, 9);
+    padding-left: .5em;
+    padding-right: .5em;
     max-width: px-to-em(868px, 48);
     margin: 0 auto;
-    @include rhythm-padding(10, 20);
+    @include rhythm-padding(5, 20);
     font-weight: $normal;
+
+    @media screen and (min-width: $mobile-landscape) {
+        padding-left: 1em;
+        padding-right: 1em;
+        @include padding-leader(10);
+        @include adjust-font-size-to(32px, 12);
+    }
 
     @media screen and (min-width: $desktop-small) {
         @include adjust-font-size-to(48px, 18);
@@ -115,13 +178,9 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-top: px-to-em(-55px, $base-font-size);
-    max-width: px-to-em(1024px, $base-font-size);
+    max-width: px-to-em(1100px, $base-font-size);
     margin-left: auto;
     margin-right: auto;
-
-    @media screen and (min-width: $desktop-small) {
-        @include padding-trailer(30);
-    }
 
     &__title {
         text-align: center;
@@ -134,6 +193,11 @@
         position: relative;
         flex: 1 49%;
         outline: none;
+        @include padding-trailer(25);
+
+        @media screen and (min-width: $desktop-small) {
+            @include padding-trailer(30);
+        }
 
         @media screen and (min-width: $desktop-small) {
             flex: 1;
@@ -149,8 +213,12 @@
             width:75%;
             height: .5em;
             margin: 0 auto;
-            box-shadow: 0 2.5em 15px 1px rgba($Nero,.1);
+            box-shadow: 0 -2.5em 15px 1px rgba($Nero, .1);
             border-radius: 100%;
+
+            @media screen and (min-width: $desktop-small) {
+                box-shadow: 0 -4.5em 15px 1px rgba($Nero, .1);
+            }
         }
     }
 
@@ -174,14 +242,22 @@
 }
 
 .containerAbout {
+
+
+
     @media screen and (min-width: $desktop-small) {
-        @include padding-trailer(13);
+        background-color: $backgroundSecondary;
+        @include margin-trailer(13);
         display: flex;
         align-items: center;
 
         &__imagesContainer {
             flex: 5;
         }
+    }
+
+    @media screen and (min-width: $desktop-large) {
+        background-color: transparent;
     }
 
     &__textContainer {
