--- a/scss/components/_slider.scss
+++ b/scss/components/_slider.scss
@@ -45,7 +45,8 @@
     height: 100%;
     min-height: 1px;
     display: none;
-    padding: 0 1em;
+    padding-left: 1em;
+    padding-right: 1em;
 
     &:focus {
         outline: none;
@@ -114,8 +115,7 @@
 }
 
 .slick-dots {
-    @include rhythm-padding(8);
-    @include margin-trailer(4);
+    @include padding-trailer(8);
     text-align: center;
 
     li {
