--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -9,7 +9,7 @@
     font-style: normal;
 }
 
-[class^="icon-"]:before, [class*=" icon-"]:before {
+[class^="icon-"]:before, [class*=" icon-"]:before, .slick-arrow:before {
     font-family: "fontello";
     font-style: normal;
     font-weight: normal;
