--- a/scss/components/_containers.scss
+++ b/scss/components/_containers.scss
@@ -47,6 +47,7 @@
                 }
 
                 @media screen and (min-width: $desktop-small) {
+                    padding-bottom: 0;
                     padding-right: 3em;
                 }
             }
@@ -161,10 +162,14 @@
     @include rhythm-padding(5, 20);
     font-weight: $normal;
 
+    p {
+        padding-bottom: 0;
+    }
+
     @media screen and (min-width: $mobile-landscape) {
+        @include rhythm-padding(10, 25);
         padding-left: 1em;
         padding-right: 1em;
-        @include padding-leader(10);
         @include adjust-font-size-to(32px, 12);
     }
 
@@ -181,6 +186,12 @@
     max-width: px-to-em(1100px, $base-font-size);
     margin-left: auto;
     margin-right: auto;
+
+    &__inner {
+        max-width: px-to-em(420px, $base-font-size);
+        margin-left: auto;
+        margin-right: auto;
+    }
 
     &__title {
         text-align: center;
@@ -210,13 +221,14 @@
         &:after {
             content: "";
             @include absolute($bottom:0,$left:0,$right:0);
-            width:75%;
+            width: 60%;
             height: .5em;
             margin: 0 auto;
             box-shadow: 0 -2.5em 15px 1px rgba($Nero, .1);
             border-radius: 100%;
 
             @media screen and (min-width: $desktop-small) {
+                width:75%;
                 box-shadow: 0 -4.5em 15px 1px rgba($Nero, .1);
             }
         }
@@ -242,15 +254,12 @@
 }
 
 .containerAbout {
+    flex: 5;
     @media screen and (min-width: $desktop-small) {
         background-color: $backgroundSecondary;
         @include margin-trailer(13);
         display: flex;
         align-items: center;
-
-        &__imagesContainer {
-            flex: 5;
-        }
     }
 
     @media screen and (min-width: $desktop-large) {
@@ -263,25 +272,37 @@
         padding-right: 1.5em;
 
         @media screen and (min-width: $desktop-small) {
-            padding-right: 1.5em;
-            flex: 7;
+            @include rhythm-padding(10);
         }
+
+        @media screen and (min-width: $desktop-large) {
+            @include rhythm-padding(8, 4);
+        }
+
 
         div {
             @media screen and (min-width: $desktop-small) {
+                max-width: px-to-em(768px, $base-font-size);
                 padding-left: 1.5em;
             }
-            max-width: px-to-em(768px, $base-font-size);
         }
     }
 }
 
 .containerWork {
-    @include padding-leader(7);
-    @include padding-trailer(15);
+    @include padding-leader(10);
+    @include padding-trailer(17);
+    @include margin-trailer(10);
     text-align: center;
 
+    @media screen and (min-width: $mobile-landscape) {
+        @include padding-leader(7);
+        @include padding-trailer(20);
+    }
+
     @media screen and (min-width: $desktop-small) {
+        @include padding-trailer(17);
+        margin-bottom: 0;
         &__containerToggle:not(&__containerToggle--extended) {
             .containerWork__list {
                 li:nth-child(n+7) {
