--- a/scss/components/_slider.scss
+++ b/scss/components/_slider.scss
@@ -80,21 +80,36 @@
 
 /* Arrows */
 
-.slick-prev,
-.slick-next {
+.slick-arrow {
     position: absolute;
     display: block;
-    height: 24px;
-    width: 24px;
-    line-height: 0;
-    font-size: 0;
     cursor: pointer;
-    background: transparent;
-    color: transparent;
-    top: 50%;
-    margin-top: -15px;
-    padding: 0;
+    bottom: -4rem;
     border: none;
+    font-size: 0;
+    line-height: 0;
+    border-radius: 100%;
+    background-color: $ctaColor;
+    color: $fontColorSecondary;
+    padding: .5rem 1rem;
+    transition: background-color .3s ease;
+
+    @media screen and (min-width: $mobile-landscape) {
+        bottom: -5rem;
+    }
+
+    &:active,
+    &:hover {
+        background-color: darken($ctaColor,10%);
+    }
+
+    &.slick-disabled {
+        background-color: $backgroundSecondary;
+    }
+
+    &:before {
+        @include adjust-font-size-to(24px);
+    }
 }
 
 .slick-prev:before,
@@ -103,11 +118,21 @@
 }
 
 .slick-prev {
-    left: 0;
+    left: 30%;
+    @extend .icon-left-dir;
+
+    @media screen and (min-width: $mobile-landscape) {
+        left: 40%;
+    }
 }
 
 .slick-next {
-    right: 0;
+    right: 30%;
+    @extend .icon-right-dir;
+
+    @media screen and (min-width: $mobile-landscape) {
+        right: 40%;
+    }
 }
 
 .slick-arrow.slick-hidden {
