--- a/scss/components/_containers.scss
+++ b/scss/components/_containers.scss
@@ -395,7 +395,7 @@
             }
         }
 
-        div {
+        .containerSecondary {
             box-shadow: inset 0 0 0 15em rgba(darken($backgroundSecondary,50%),0);
             transition: box-shadow 0.3s ease;
             @include padding-leader(5);
@@ -406,11 +406,15 @@
                 padding-bottom: 0;
             }
         }
+    }
 
-        img {
-            margin-top: -29%;
-            margin-left: auto;
-            margin-right: auto;
-        }
+    &__imageWrapper {
+        margin-top: -29%;
+        margin-left: auto;
+        margin-right: auto;
+        background-image: url("../images/project-bg.png");
+        padding: percentage(27/691) percentage(89/691) percentage(57/691);
+        background-repeat: no-repeat;
+        background-size: contain;
     }
 }
