--- a/scss/components/_containers.scss
+++ b/scss/components/_containers.scss
@@ -183,9 +183,14 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-top: px-to-em(-55px, $base-font-size);
-    max-width: px-to-em(1100px, $base-font-size);
+    max-width: px-to-em(1180px, $base-font-size);
     margin-left: auto;
     margin-right: auto;
+
+    @media screen and (min-width: $desktop-small) {
+        padding-left: 1.5em;
+        padding-right: 1.5em;
+    }
 
     &__inner {
         max-width: px-to-em(420px, $base-font-size);
@@ -266,18 +271,43 @@
     }
 
     &__imagesContainer {
-        @media screen and (min-width: $desktop-large) {
-            flex: 2;
+        min-height: 0;
+        min-width: 0;
+        flex: 5;
+    }
+
+    .slick-slider {
+        position: relative;
+
+        .slick-slide {
+            padding: 0;
+        }
+
+        .slick-dots {
+            @include absolute($bottom: 0, $left: 0);
+            margin-left: .5em;
+            padding-bottom: .5em;
+
+            li {
+                display: block;
+                @include margin-trailer(3);
+                border: 2px solid $backgroundPrimary;
+            }
         }
     }
 
     &__textContainer {
+        width: 100%;
+        flex: 1;
         @include rhythm-padding(8, 4);
         padding-left: 1.5em;
         padding-right: 1.5em;
 
+
+
         @media screen and (min-width: $desktop-small) {
             @include rhythm-padding(10);
+            flex: 7;
         }
 
         @media screen and (min-width: $desktop-large) {
