--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -40,6 +40,7 @@
 @import "components/buttons";
 @import "components/icons";
 @import "components/slider";
+@import "components/loader";
 
 /*------------------------------------------------------------*\
                       LAYOUT INCLUDES
