--- a/scss/components/_containers.scss
+++ b/scss/components/_containers.scss
@@ -218,14 +218,14 @@
         @media screen and (min-width: $desktop-small) {
             flex: 1;
 
-            &:not(:first-child){
+            &:not(:first-child) {
                 padding-left: 2em;
             }
         }
 
         &:after {
             content: "";
-            @include absolute($bottom:0,$left:0,$right:0);
+            @include absolute($bottom: 0, $left: 0, $right: 0);
             width: 60%;
             height: .5em;
             margin: 0 auto;
@@ -233,7 +233,7 @@
             border-radius: 100%;
 
             @media screen and (min-width: $desktop-small) {
-                width:75%;
+                width: 75%;
                 box-shadow: 0 -4.5em 15px 1px rgba($Nero, .1);
             }
         }
@@ -303,8 +303,6 @@
         padding-left: 1.5em;
         padding-right: 1.5em;
 
-
-
         @media screen and (min-width: $desktop-small) {
             @include rhythm-padding(10);
             flex: 7;
@@ -313,7 +311,6 @@
         @media screen and (min-width: $desktop-large) {
             @include rhythm-padding(8, 4);
         }
-
 
         div {
             @media screen and (min-width: $desktop-small) {
@@ -343,8 +340,8 @@
 
         &__wrapper {
             padding: 0;
-            margin-left: -30%;
-            margin-right: -30%;
+            margin-left: -10%;
+            margin-right: -10%;
         }
     }
 
@@ -363,7 +360,7 @@
     &__card {
         outline: none;
 
-        &Title{
+        &Title {
             @include adjust-font-size-to(36px);
             @include margin-trailer(2);
         }
@@ -376,13 +373,13 @@
 
             &:hover {
                 .containerSecondary {
-                    box-shadow: inset 0 0 0 15em rgba(darken($backgroundSecondary,50%),.3);
+                    box-shadow: inset 0 0 0 15em rgba(darken($backgroundSecondary, 50%), .3);
                 }
             }
         }
 
         .containerSecondary {
-            box-shadow: inset 0 0 0 15em rgba(darken($backgroundSecondary,50%),0);
+            box-shadow: inset 0 0 0 15em rgba(darken($backgroundSecondary, 50%), 0);
             transition: box-shadow 0.3s ease;
             @include padding-leader(5);
             padding-bottom: 29%;
@@ -405,12 +402,6 @@
     }
 
     @media screen and (min-width: $desktop-small) {
-
-        .slick-list {
-            margin-left: -2.5em;
-            margin-right: -2.5em;
-        }
-
         .slick-slide {
             transform: scale(.88);
             padding: 0;
@@ -422,12 +413,20 @@
 
             img {
                 image-rendering: -moz-crisp-edges;
-                image-rendering:   -o-crisp-edges;
+                image-rendering: -o-crisp-edges;
                 image-rendering: -webkit-optimize-contrast;
                 image-rendering: crisp-edges;
                 -ms-interpolation-mode: nearest-neighbor;
             }
 
+        }
+
+        .slick-next {
+            right: 9%;
+        }
+
+        .slick-prev {
+            left: 9%;
         }
 
         .slick-dots {
@@ -440,14 +439,6 @@
             z-index: 2;
         }
 
-        .slick-next {
-            right: 19%;
-        }
-
-        .slick-prev {
-            left: 19%;
-        }
-
         .slick-slide:not(.slick-center) {
             opacity: .25;
             pointer-events: none;
@@ -457,5 +448,22 @@
         .slick-center {
             transform: scale(1);
         }
+    }
+
+    @media screen and (min-width: $desktop-small) and (min-height: $mobile-wide) {
+        &__wrapper {
+            padding: 0;
+            margin-left: -27%;
+            margin-right: -27%;
+        }
+
+        .slick-next {
+            right: 19%;
+        }
+
+        .slick-prev {
+            left: 19%;
+        }
+
     }
 }
