--- a/scss/components/_loader.scss
+++ b/scss/components/_loader.scss
@@ -13,12 +13,14 @@
 
     &:before {
         content: "";
-        display: block;
+        display: inline-block;;
         position: absolute;
         width: 1em;
         height: 1em;
+        margin-left: -.5em;
+        margin-top: -.5em;
         border-radius: 100%;
-        background: $backgroundSecondary;
+        background: $ctaColor;
         animation: jump 1s linear infinite;
     }
 }
