--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.eot?15752893');
-    src: url('../font/fontello.eot?15752893#iefix') format('embedded-opentype'),
-    url('../font/fontello.woff?15752893') format('woff'),
-    url('../font/fontello.ttf?15752893') format('truetype'),
-    url('../font/fontello.svg?15752893#fontello') format('svg');
+    src: url('../font/Fontello/fontello.eot?15752893');
+    src: url('../font/Fontello/fontello.eot?15752893#iefix') format('embedded-opentype'),
+    url('../font/Fontello/fontello.woff?15752893') format('woff'),
+    url('../font/Fontello/fontello.ttf?15752893') format('truetype'),
+    url('../font/Fontello/fontello.svg?15752893#fontello') format('svg');
     font-weight: normal;
     font-style: normal;
 }
