--- a/scss/components/_containers.scss
+++ b/scss/components/_containers.scss
@@ -93,8 +93,7 @@
         }
 
         @media screen and (min-width: $desktop-small) and (min-height: $mobile-landscape-custom) {
-            padding-top: 0;
-            max-height: calc(100vh - 4em);
+            max-height: 100vh;
         }
     }
 
@@ -415,7 +414,7 @@
             transition: box-shadow 0.3s ease;
             @include padding-leader(5);
             padding-bottom: 29%;
-            min-height: 100%;
+            //min-height: 100%;
             position: relative;
             z-index: -2;
         }
