--- a/scss/components/_slider.scss
+++ b/scss/components/_slider.scss
@@ -93,20 +93,29 @@
     background-color: $ctaColor;
     color: $fontColorSecondary;
     padding: .5rem 1rem;
-    transition: background-color .3s ease;
+    transition: opacity .3s ease;
     z-index: 2;
+    opacity: 1;
 
-    &:active,
-    &:hover {
+    @media screen and (min-width: $desktop-small) {
+        padding: .7rem 1.5rem
+    }
+
+    &:not(.slick-disabled):active,
+    &:not(.slick-disabled):hover {
         background-color: darken($ctaColor,10%);
     }
 
     &.slick-disabled {
-        background-color: $backgroundSecondary;
+        opacity: .4;
     }
 
     &:before {
         @include adjust-font-size-to(24px);
+
+        @media screen and (min-width: $desktop-small) {
+            @include adjust-font-size-to(40px);
+        }
     }
 }
 
